# quant_agent

./: .gitignore  AGENTS.md  AGENT_WORKBENCH_USER_GUIDE.md  AGENT_WORKBENCH_WORKFLOW_WALKTHROUGH.md  README.md  pyproject.toml
deploy/docker/: Dockerfile.api
src/quant_agent_runtime/: action_request.py  app_clients.py  capabilities.py  capability_discovery.py  confirmation.py  context_builder.py  context_preview.py  demo_narrative.py  execution.py  external_approval.py  governance.py  ledger.py  llm_profiles.py  models.py  orchestration.py  plan_revision.py  plan_revision_activation.py  preflight.py  progress.py  provider_config.py  redaction.py  retry.py  revalidation.py  run_state.py  run_status.py  runtime.py  sample_autopilot.py  sample_reset.py  summary_text.py  user_workflow.py  workflow_handoffs.py  workflow_runner.py  workflow_scope_resolution.py
src/quant_agent_runtime/api/: __init__.py  app.py
src/quant_agent_runtime/contracts/: __init__.py  internal_test_fixtures.py  loader.py
src/quant_agent_runtime/model_gateway/: __init__.py  fake.py  provider.py  shared_llm.py
src/quant_agent_runtime/planner/: __init__.py  service.py
src/quant_agent_runtime/policy/: __init__.py  engine.py
src/quant_agent_runtime/validation/: __init__.py  errors.py  plan_validator.py
tests/: test_api.py  test_context_builder.py  test_contracts.py  test_ledger.py  test_planner_validation.py  test_shared_llm_provider.py
