[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-agent-runtime"
version = "0.1.0"
description = "Hosted plan-only runtime slice for the Quant Suite governed agent workflow."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.7",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
